[tool.poetry]
name = "hexdropper"
version = "0.1.0"
description = "Python package for determining the hex colour code given a cropped image."
authors = ["Julia Everitt, Hancheng Qin, Joey Wu, Mona Zhu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
