[tool.poetry]
name = "hexdropper"
version = "2.0.0"
description = "Python package for determining the hex colour code given a cropped image."
authors = ["Julia Everitt, Hancheng Qin, Joey Wu, Mona Zhu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.9.0.80"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
Sphinx = "^4.0.0"
sphinxcontrib-napoleon = "^0.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
